--- a/tpl/HeaderView.html
+++ b/tpl/HeaderView.html
@@ -34,7 +34,6 @@
                     </ul>
                 </li>
             </ul>
-        </div>
-        <!--/.nav-collapse -->
+        </div> <!--/.nav-collapse -->
     </div>
 </div>
